--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
+    "pencl-base": "git+https://github.com/TerraZero/pencl-base.git",
     "pencl-database": "git+https://github.com/TerraZero/pencl-database.git",
     "pencl-router": "git+https://github.com/TerraZero/pencl-router.git"
   }
